--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,8 @@ body {
 .paper-content {
   padding: 1.4em; /* 参考原项目 md 尺寸的 padding */
   background-color: #f1edeee1;
+  min-height: 30vh;
+  min-width: 800px;
 }
 
 /* 大头针样式 */
@@ -66,6 +68,7 @@ body {
   text-align: center;
   position: relative;
   padding-top: 20px;
+  padding-bottom: 20px;
   min-height: 3em;
 }
 
@@ -146,7 +149,7 @@ body {
 
 #markdown-body {
   /* 参考原项目的样式 */
-  max-width: 900px;
+  max-width: 1000px;
   margin: 0 auto;
   padding-bottom: 12px;
   padding-top: 12px;
@@ -394,4 +397,12 @@ body {
     content: " (" attr(href) ")" ; /* 打印时显示链接地址 */
     color: #666 ;
   }
+}
+
+
+.error-message {
+  color: #ff4d4f; /* 错误消息文字颜色改为红色 (更鲜艳) */
+  font-size: 1.1rem;
+  margin-top: 60px;
+  text-align: center;
 }
